# rust_chess_api

./: .bacon-locations  Cargo.toml  Dockerfile  bacon.toml
src/: chess.rs  lib.rs  main.rs  tests.rs
src/tests/: movement.rs
src/tests/movement/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
