[package]
name = "rust_chess_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
num-traits = "0.2.16"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = "1.30.0"
