[package]
name = "rust_chess_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", optional = true }
serde = { version = "1.0.183", features = ["derive"], optional = true }
serde_json = { version = "1.0.104", optional = true }
tokio = { version = "1.30.0", optional = true }

[[bin]]
name = "rust_chess_api"
path = "src/main.rs"
required-features = ["binary"]

[lib]
name = "rust_chess_api"
path = "src/lib.rs"

[features]
actions = []
binary = [
    "dep:actix-web",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "actions",
]
serde = ["dep:serde", "dep:serde_json"]
