[package]
name = "rust_chess_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = "1.30.0"
rust-chess = { git = "https://github.com/ThePyroTF2/rust-chess.git", branch = "master", features = [
    "actix",
    "actions",
] }
actix-cors = "0.6.4"
